@@ -9,11 +9,11 @@ module Spec
         __mock_proxy.add_negative_message_expectation(caller(1)[0], sym.to_sym, &block)
       end
       
-      def stub!(sym_or_hash, opts={})
+      def stub!(sym_or_hash, opts={}, &block)
         if Hash === sym_or_hash
           sym_or_hash.each {|method, value| stub!(method).and_return value }
         else
-          __mock_proxy.add_stub(caller(1)[0], sym_or_hash.to_sym, opts)
+          __mock_proxy.add_stub(caller(1)[0], sym_or_hash.to_sym, opts, &block)
         end
       end
       
